# grouphug

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  base-ds.ipynb  dev-base-hf.py  dev-lm-gpt2.py  dev-tinybert-gh.py  pyproject.toml
.github/workflows/: release.yaml  test.yaml
docs/: conf.py  grouphug.rst  index.rst
examples/: from-readme.ipynb  glue.ipynb  lm.ipynb  neox.ipynb  readme.ipynb  sentiment.ipynb  utils.py
grouphug/: __init__.py  collator.py  config.py  dataset_collection.py  dataset_formatter.py  model.py  trainer.py  utils.py
grouphug/heads/: __init__.py  base.py  classification.py  lm.py
tests/: automodel.py  conftest.py  test_dataset_collection.py  test_dataset_formatter.py  test_model.py  test_train.py
