[tool.poetry]
name = "grouphug"
version = "0.7.0"
description = ""
authors = ["Sander Land <sander@chatdesk.com>"]
license = "Apache2"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.poetry.dependencies]
python = "^3.8,<4.0"
transformers = "^4.19.0"
datasets = "^2.0.0"
torch = "^1.10.0"
numpy = "^1.21"
regex = "^2022.3.15"
Unidecode = "^1.3.4"
sentencepiece = "^0.1.96"
demoji = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-subtests = "^0.7.0"
jupyterlab = "^3.3.2"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.10.1"
black = "^22.3.0"
ipywidgets = "^7.6.3"
pre-commit = "^2.13.0"
matplotlib = "^3.4.2"
Werkzeug = "<2.1"
scikit-learn = "^1.0.2"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
